2000-05-28  Oliver Kiddle  <opk@zsh.org>

	* 11615: Completion/Builtins/_which, Completion/Builtins/_unhash:
	use of _arguments for completion of a couple more builtins

2000-05-27  Bart Schaefer  <schaefer@zsh.org>

	* 11606: Src/parse.c, Test/01grammar.ztst: Propagate parse errors
	out of parse_list() and parse_event(), and test that it worked.

	* 11607: Src/builtin.c: For "read -q", open shout if necessary
	even when SHTTY is already a valid descriptor; just don't close
	it again in that case.  Restores behavior from 10727 that was
	lost in 11524.

2000-05-26  Clint Adams  <schizo@debian.org>

	* 11599: Completion/User/_perl_modules: check to make sure
	the directories in @INC exist and are executable before
	trying to cd to them.

2000-05-26  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11590: configure.in, Config/defs.mk.in, Etc/MACHINES,
	Src/Makefile.in, Src/Modules/mathfunc.c, Src/Modules/zftp.c:
	Various Cygwin fixes: compilation glitches in zsh/mathfunc and
	zsh/zftp; installation didn't handle .exe extension properly;
	installation note.

	* 11587: Felix Rosencrantz: Src/pattern.c: uninitialised variable.

2000-05-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 11566: Src/Zle/zle_main.c: disable vared if zle is not enabled
	
2000-05-25  Oliver Kiddle  <opk@u.genie.co.uk>

	* 11579: Completion/Builtins/_compdef, Completion/Builtins/_zpty:
	split _arguments calls into sets to avoid long mutex lists

2000-05-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 11576: Completion/Core/compdump, Completion/Core/compinit:
 	beautify format of compdump file
	
	* 11570: Completion/Core/_path_files: fix for special-dirs when
 	used with -g patterns
	
	* 11569: Src/Zle/complist.c: better cursor-movement in
 	menu-selection
	
2000-05-25  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11567: Src/Modules/zftp.c: fix fcntl() argument for FD_CLOEXEC.

2000-05-25  Sven Wischnowsky  <wischnow@zsh.org>
