@@ -43,21 +43,19 @@ whenlatex(report(ARG1)(ARG2)(ARG3))\
 whenman(report(ARG1)(ARG2)(ARG3))\
 whenms(report(ARG1)(ARG2)(ARG3))\
 whensgml(report(ARG1)(ARG2)(ARG3)))
-myreport(Z-Shell Frequently-Asked Questions)(Peter Stephenson)(2000/04/30)
+myreport(Z-Shell Frequently-Asked Questions)(Peter Stephenson)(2000/05/24)
 COMMENT(-- the following are for Usenet and must appear first)\
 description(\
 mydit(Archive-Name:) unix-faq/shell/zsh
-mydit(Last-Modified:) 2000/04/30
+mydit(Last-Modified:) 2000/05/24
 mydit(Submitted-By:) email(pws@pwstephenson.fsnet.co.uk (Peter Stephenson))
 mydit(Posting-Frequency:) Monthly
 mydit(Copyright:) (C) P.W. Stephenson, 1995--2000 (see end of document)
 )
 
-bf(Changes since issue posted March 2000:)
+bf(Changes since issue posted April 2000:)
 description(
-mydit(3.8)  Mention the `keypad mode' horror and fixes (from Bart).
-mydit(3.25) Rephrased, example for older versions added.
-mydit(5.1)  Mention :x and :q modifiers again
+mydit(2.5)  Mention that tt(${var/old/new}) is a little different from bash.
 )
 
 This document contains a list of frequently-asked (or otherwise
@@ -887,6 +885,20 @@ sect(Similarities with bash)
   Broadly, bash has paid more attention to standards compliancy
   (i.e. POSIX) for longer, and has so far avoided the more abstruse
   interactive features (programmable completion, etc.) that zsh has.
+
+  In recent years there has been a certain amount of crossover in the
+  extensions, however.  Zsh now (3.1.6) has bash's `tt(${var/old/new})'
+  feature for replacing the text tt(old) with the text(new) in the
+  parameter tt($var).  Note one difference here:  while both shells
+  implement the syntax `tt(${var/#old/new})' and `tt(${var/%old/new})' for
+  anchoring the match of tt(old) to the start or end of the parameter text,
+  respectively, in zsh you can't put the `tt(#)' or `tt(%)' inside a
+  parameter:  in other words `tt({var/$old/new})' where tt(old) begins with
+  a `tt(#)' treats that as an ordinary character in zsh, unlike bash.  To
+  do this sort of thing in zsh you can use (from 3.1.7) the new syntax
+  for anchors in any pattern, `tt((#s))' to match the start of a string,
+  and `tt((#e))' to match the end.  These require the option
+  tt(EXTENDED_GLOB) to be set.
 
 
 sect(Shouldn't zsh be more/less like ksh/(t)csh?)
